--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 	<!-- <script type="text/javascript" src="js/01-hola-mundo.js"></script> -->
 	<!-- <script type="text/javascript" src="js/02-variables.js"></script> -->
 	<!-- <script type="text/javascript" src="js/03-let_y_var.js"></script> -->
-	<script type="text/javascript" src="js/04-constantes.js"></script>
+	<!-- <script type="text/javascript" src="js/04-constantes.js"></script> -->
+	<!-- <script type="text/javascript" src="js/05-tipos-de-datos.js"></script> -->
+	<!-- <script type="text/javascript" src="js/10-ventanas.js"></script> -->
+	<!-- <script type="text/javascript" src="js/11-ejercicio1.js"></script> -->
+	<!-- <script type="text/javascript" src="js/12-ejercicio2.js"></script> -->
+	<!-- <script type="text/javascript" src="js/13-ejercicio3.js"></script> -->
+	<script type="text/javascript" src="js/14-ejercicio4.js"></script>
 </head>
 <body>
-	<h1>Curso empezando el dia 13/08/2019</h1>
+	<h1>13/08/2019</h1>
 </body>
 </html>
