ejercicios desde 14 al 18

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
-	<title>Hola mundo con JavaScript</title>
+	<title>JavaScript</title>
 	<!-- <script type="text/javascript">
 		alert('Hola mundo con JS');
 		alert('Bienvenido al curso');
@@ -16,9 +16,14 @@
 	<!-- <script type="text/javascript" src="js/11-ejercicio1.js"></script> -->
 	<!-- <script type="text/javascript" src="js/12-ejercicio2.js"></script> -->
 	<!-- <script type="text/javascript" src="js/13-ejercicio3.js"></script> -->
-	<script type="text/javascript" src="js/14-ejercicio4.js"></script>
+	<!-- <script type="text/javascript" src="js/14-ejercicio4.js"></script> -->
+	<!-- <script type="text/javascript" src="js/15-ejercicio5.js"></script> -->
+	<!-- <script type="text/javascript" src="js/16-ejercicio6.js"></script> -->
+	<!-- <script type="text/javascript" src="js/17-ejercicio7.js"></script> -->
+	<script type="text/javascript" src="js/18-ejercicio8.js"></script>
 </head>
+
 <body>
-	<h1>13/08/2019</h1>
+	<h1>2019-2020</h1>
 </body>
 </html>
