--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 	<!-- <script type="text/javascript" src="js/01-hola-mundo.js"></script> -->
 	<!-- <script type="text/javascript" src="js/02-variables.js"></script> -->
 	<!-- <script type="text/javascript" src="js/03-let_y_var.js"></script> -->
-	<script type="text/javascript" src="js/04-constantes.js"></script>
+	<!-- <script type="text/javascript" src="js/04-constantes.js"></script> -->
+	<!-- <script type="text/javascript" src="js/05-tipos-de-datos.js"></script> -->
+	<!-- <script type="text/javascript" src="js/06-condicionales.js"></script> -->
+	<!-- <script type="text/javascript" src="js/07-switch.js"></script> -->
+	<script type="text/javascript" src="js/10-ventasnas.js"></script>
 </head>
 <body>
 	<h1>Curso empezando el dia 13/08/2019</h1>
