--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
 	<!-- <script type="text/javascript" src="js/03-let_y_var.js"></script> -->
 	<!-- <script type="text/javascript" src="js/04-constantes.js"></script> -->
 	<!-- <script type="text/javascript" src="js/05-tipos-de-datos.js"></script> -->
-<<<<<<< HEAD
-	<!-- <script type="text/javascript" src="js/06-condicionales.js"></script> -->
-	<!-- <script type="text/javascript" src="js/07-switch.js"></script> -->
-	<script type="text/javascript" src="js/10-ventasnas.js"></script>
-=======
 	<!-- <script type="text/javascript" src="js/10-ventanas.js"></script> -->
 	<!-- <script type="text/javascript" src="js/11-ejercicio1.js"></script> -->
 	<!-- <script type="text/javascript" src="js/12-ejercicio2.js"></script> -->
@@ -25,8 +20,11 @@
 	<!-- <script type="text/javascript" src="js/15-ejercicio5.js"></script> -->
 	<!-- <script type="text/javascript" src="js/16-ejercicio6.js"></script> -->
 	<!-- <script type="text/javascript" src="js/17-ejercicio7.js"></script> -->
-	<script type="text/javascript" src="js/18-ejercicio8.js"></script>
->>>>>>> e90f67a6a8c1d34b79bfbed612e9e2132ac1b0bf
+	<!-- <script type="text/javascript" src="js/18-ejercicio8.js"></script> -->
+	<!-- <script type="text/javascript" src="js/19-funciones.js"></script> -->
+	<!-- <!-- <script type="text/javascript" src="js/20-parametros2.js"></script> --> -->
+	<!-- <script type="text/javascript" src="js/21-funciones-anonimas.js"></script> -->
+	<script type="text/javascript" src="js/22-ambito.js"></script>
 </head>
 
 <body>
