--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="utf-8">
 	<title>JavaScript</title>
@@ -22,9 +23,12 @@
 	<!-- <script type="text/javascript" src="js/17-ejercicio7.js"></script> -->
 	<!-- <script type="text/javascript" src="js/18-ejercicio8.js"></script> -->
 	<!-- <script type="text/javascript" src="js/19-funciones.js"></script> -->
-	<!-- <!-- <script type="text/javascript" src="js/20-parametros2.js"></script> --> -->
+	<!-- <script type="text/javascript" src="js/20-parametros2.js"></script> --> 
 	<!-- <script type="text/javascript" src="js/21-funciones-anonimas.js"></script> -->
-	<script type="text/javascript" src="js/22-ambito.js"></script>
+	<!-- <script type="text/javascript" src="js/22-ambito.js"></script> -->
+	<!-- <script type="text/javascript" src="js/23-funciones-texto.js"></script> -->
+	<!-- <script type="text/javascript" src="js/24-plantillas.js"></script> -->
+	<script type="text/javascript" src="js/25-arrays.js"></script>
 </head>
 
 <body>
