--- a/index.html
+++ b/index.html
@@ -23,15 +23,44 @@
 	<!-- <script type="text/javascript" src="js/17-ejercicio7.js"></script> -->
 	<!-- <script type="text/javascript" src="js/18-ejercicio8.js"></script> -->
 	<!-- <script type="text/javascript" src="js/19-funciones.js"></script> -->
-	<!-- <script type="text/javascript" src="js/20-parametros2.js"></script> --> 
+	<!-- <script type="text/javascript" src="js/20-parametros2.js"></script> -->
 	<!-- <script type="text/javascript" src="js/21-funciones-anonimas.js"></script> -->
 	<!-- <script type="text/javascript" src="js/22-ambito.js"></script> -->
 	<!-- <script type="text/javascript" src="js/23-funciones-texto.js"></script> -->
 	<!-- <script type="text/javascript" src="js/24-plantillas.js"></script> -->
-	<script type="text/javascript" src="js/25-arrays.js"></script>
+	<!-- <script type="text/javascript" src="js/25-arrays.js"></script> -->
+	<!-- <script type="text/javascript" src="js/26-arrays-multi.js"></script> -->
+	<!-- <script type="text/javascript" src="js/27-ejercicio-arrays.js"></script> -->
+
+
+
+
 </head>
 
 <body>
 	<h1>2019-2020</h1>
+	<h2>Christopher</h2>
+
+	<p>
+	<!-- <button id="boton" ondblclick="cambiarColor();">Presioname</button> -->
+	<button id="boton">Presioname</button>
+	</p>
+
+	<br>
+	<div id="Micaja">Hola soy una caja</div>
+	<hr/>
+
+	<section id="miseccion">
+		<h1 id="encabezado">Listado de los textos de los divs</h1>
+	</section>
+	<div class="amarillo">Hola soy el primero</div>
+	<div class="rojo">Soy el segundo</div>
+	<div class="rojo">Soy el tercero</div>
+
+
+	<!-- SCRIPTS -->
+	<!-- <script type="text/javascript" src="js/28-dom.js"></script> -->
+	<!-- <script type="text/javascript" src="js/29-bom.js"></script> -->
+	<script type="text/javascript" src="js/30-eventos.js"></script>
 </body>
 </html>
